clarify notes & tweak js

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -20,6 +20,8 @@
             <i class="fa fa-search"></i>
         </div>
     </header>
+    <input type="checkbox" class="toggle-sidebar" id="toggle-sidebar"/>
+    <label for="toggle-sidebar" class="toggle-sidebar-label"></label>
     <main>
         <article>
             <section>
@@ -31,8 +33,6 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam distinctio vero nemo modi dolorem officiis dicta doloremque veniam, aperiam praesentium ullam corrupti alias similique quas ut dolor unde. Esse, officia.</p>
             </section>
         </article>
-        <input type="checkbox" class="toggle-sidebar" id="toggle-sidebar"/>
-        <label for="toggle-sidebar" class="toggle-sidebar-label"></label>
         <aside>
             <h3>Related links:</h3>
             <ul>
