remove unused CSS

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <header>
         <h1 aria-label="Header">Header</h1>
         <div class="search__container">
-            <input type="text" name="search"/>
+            <input type="text" name="search" aria-label="Search for content."/>
             <i class="fa fa-search"></i>
         </div>
     </header>
-    <input type="checkbox" class="toggle-sidebar" id="toggle-sidebar"/>
+    <input type="checkbox" class="toggle-sidebar" id="toggle-sidebar" aria-label="Display links related to this content."/>
     <label for="toggle-sidebar" class="toggle-sidebar-label"></label>
     <main>
         <article>
